--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -556,7 +556,9 @@
       "title": "Recovery Code"
     },
     "text": {
-      "askTrustedConnections": "Ask your trusted connections to scan this code."
+      "askTrustedConnections": "Please show this QR code to your trusted connections",
+      "signatures": "{{count}} / 2 signatures",
+      "additionalInfo": "Your trusted connections will need to scan this to help you recover your BrightID"
     }
   },
   "restore": {
@@ -579,8 +581,10 @@
     "text": {
       "chooseConnectionToHelp": "Please select the connection whose account you are helping to recover.",
       "downloadingData": "Downloading data from backup server…",
-      "enterPassword": "Enter a password that you encrypted your backup data with:",
-      "noConnections": "No connections…"
+      "enterPassword": "Please enter your password",
+      "noConnections": "No connections…",
+      "skipLoadingBackup": "Without the password you can still recover your BrightID but the name & photo of your connections & groups will not be available.",
+      "skipLink": "skip"
     },
     "title": {
       "chooseConnection": "Choose Connection"
