--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -125,7 +125,8 @@
         "trustedSigned": "One of your trusted connections signed your request"
       },
       "title": {
-        "lostKeys": "We've lost the BrightID keypair from the device"
+        "lostKeys": "We've lost the BrightID keypair from the device",
+        "pleaseConfirm": "Please Confirm"
       },
       "yes": "Yes"
     },
@@ -566,7 +567,8 @@
       "text": {
         "notTrusted": "One of your friends is not in your list of trusted connections",
         "requestRecovering": "Your request to help recovering this account submitted successfully!",
-        "restoreSuccess": "Your account recovered successfully!"
+        "restoreSuccess": "Your account recovered successfully!",
+        "restoreConfirm": "Is {{name}} the account you are helping to recover?"
       },
       "title": {
         "notTrusted": "Uh Oh"
@@ -574,6 +576,12 @@
     },
     "button": {
       "startRestore": "Start Restore"
+    },
+    "emptyList": {
+      "text": {
+        "downloadingData": "Downloading recovery connection data",
+        "nobodyHasChosen": "Unable to recover connection...\nThey did not set you as recovery"
+      }
     },
     "header": {
       "accountRecovery": "Account Recovery"
