--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -535,7 +535,9 @@
       "title": {
         "codeGroup": "Group code",
         "codeSingle": "Single-use code"
-      }
+      },
+      "connectSingle": "Connect with {{name}} on BrightID: {{link}}",
+      "connectGroup": "Make a group connection with {{name}} on BrightID: {{link}}"
     },
     "button": {
       "copyLink": "Copy Link",
