Check version of channelInfo file and show a message if version is wrong. Improve error handling when scanned code can not be read.

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -96,6 +96,14 @@
       "noConnections": "No connections"
     }
   },
+  "channel": {
+    "alert": {
+      "text": {
+        "localOutdated": "client version outdated - please update your client and retry",
+        "otherOutdated": "other client version outdated - QRCode creator needs to update client and retry"
+      }
+    }
+  },
   "common": {
     "accessibilityLabel": {
       "addPhoto": "add photo",
