feat: Enable changing of connection level on reconnect
Fixes #685

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -216,7 +216,7 @@
       "connections": "Connections"
     },
     "label": {
-      "currentConnectionLevel": "Current connection level",
+      "currentConnectionLevel": "Connection level",
       "newProfile": "New Profile",
       "oldProfile": "Old Profile"
     },
