--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -603,7 +603,9 @@
     "text": {
       "chooseConnectionToHelp": "Please select the connection whose account you are helping to recover.",
       "enterPassword": "Please enter your password",
-      "skipLoadingBackup": "Without the password you can still recover your BrightID but the name & photo of your connections & groups will not be available."
+      "skipLoadingBackup": "Without the password you can still recover your BrightID but the name & photo of your connections & groups will not be available.",
+      "downloadingData": "Downloading data ...",
+      "skip": "Skip"
     }
   },
   "signup": {
